--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: form_data
-version: 0.0.1-nullsafety.0
-description: Form data parser and builder for Dart
-homepage: https://github.com/are/form-data
+version: 0.0.1-nullsafety.1
+description: multipart/form-data builder for Dart aiming to be compatible with RFC 7578.
+homepage: https://github.com/are/form_data
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
